--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,9 +8,15 @@ permalink: notepad
 
 # NOTEPAD - COMMON
 
-# ARTICLES
+# ARTICLES - GRAMMAR
 
-# On / In / At
+## Terms
+
+- conjugate a verb
+
+  
+
+## On / In / At
 
 - I'll be back **in** the afternoon.
 
@@ -24,20 +30,41 @@ permalink: notepad
 
 - On Monday, Tuesday
 
-  
-
-# Abbreviation
-
-1. TIA - Thanks in advance
-
-2. IMO - In my opinion
-3. 21'' screen - 21 inch screen
 
 
 
-# If I do VS if I did
+## Must/Have To/Should
 
-## Usage
+### Formal Vs unformal
+
+Must - formal, often used in writting
+
+Have to - unformal, prefer it when to speak
+
+### You decision Vs Situation
+
+Must - own decision
+
+Have to - doctor's decision (situation)
+
+### MUST
+
+1. Obligation
+2. Strong advice
+3. Something forbidden (rule)
+
+### Should
+
+1. Advice
+   - Prefer **shouldn't** if it's advice (not mustn't)
+
+**I think (option)**
+
+
+
+## If I do VS if I did
+
+### Usage
 
 - Regret
 - Assumption
@@ -45,474 +72,40 @@ permalink: notepad
 - Suggestion
 - Wishes
 
-## Examples
 
-1. If I passed this exam I would get the scholarship. But I didn't.
-2. If he woke up early he wouldn't be late on the train. But he overslept.
-3. If I won a lottery I would buy a new car.
-4. If I saw my mother I would be happy.
-5. If I passed excellent all the exams I would get the scholarship. It's very hard, but I'll try.
-6. When I get a salary I will buy a down jacket. It's getting cold in Saint-Petersburg.
-7. If we buy this car, I will have to borrow 200 000 rubles.
-8. If we takes a picture together in Bali, It will be cool.
-9. If he invites me to the party I will join with pleasure.
 
+### Usage 2
 
+- Fact
+- Imagination
+- Suggestion
 
-# Small talks
 
-## Greeting
 
-- Hello [name], How are you?
-- Hi, [name]. How are you getting on?
-- Hello, How are you doing?
+### Examples
 
-## Weekend
+**Murphy p. 313 ex. 19 -> Answer p. 369**
 
-- How you enjoyed your weekend?
-- How did you enjoy your weekend?
-- How was your weekend?
+1. If **you found**, a wallet in the street, what would you do with it? (you / find)
+2. I must hurry. My friend will be annoyed if **I’m not** on time. (I / not / be)
+3. I didn't realise that Gary was in hospital. If **I'd known** he was in hospital, I would have gone to visit him. (I / know)
+4. If the phone **rings**, can you answer it? (ring)
+5. I can't decide what to do. What would you do if **you were** in my position?(you / be)
+6. a : What shall we do tomorrow?
+   b : Well, if **it's** a nice day, we can go to the beach. (it / be)
+7. a : Let's go to the beach.
+   b : No, it's too cold. If **it was** warmer, I wouldn't mind going. (it / be)
+8. a : Did you go to the beach yesterday?
+   b : No, it was too cold. If **it had been** warmer, we might have gone. (it / be)
+9. If **you had** enough money to go anywhere in the world, where would you go? (you / have)
+10. I'm glad we had a map. I'm sure we would have got lost if **we hadn't had** one. (we / not / have)
+11. The accident was your fault. If **you had driven/you had been driving** more carefully, it wouldn't have happened. (you / drive)
+12. a : Why do you read newspapers?
+    b : Well, if **I didn't read** newspapers, I wouldn't know what was happening in the world. (I / not / read)
 
 
 
-# TODO
-
-## ??? Does he prohibited clean his room VS Is he prohibited clean his room
-
-
-
-## Where did you have your hair cut? Which hairdresser did you go to?
-
-- ~~did you cut your hair~~ неправильно, так как он не сам стригся, а его стригил. И тут пасивный залог заменяется, конструкцией `did you have something`
-
-
-
-# Does (~~Do~~) everybody
-
-- nobody
-- anybody
-- somebody
-- There was a fight at the party, but **nobody was** hurt. 
-
-
-
-# Web-meeting
-
-## General
-
-- I'm back
-- He will be a bit later. He asked to start without him. He'll join (?to) us as soon as he can.
-
-## Browser navigation
-
-- Let's go back to the previous page
-
-## Problems
-
-- Let me call back! (Need to restart the laptop)
-- I can't hear you.
-  - Oh, something happened with my headphones, but now it works.
-- I can't see you (Skype), (~~I don't see you~~), 
-- I should charge my laptop.
-  - Here we go! .. Sorry.. Go ahead!
-
-
-
-# Common
-
-- She has gone (Oна ушла)
-
-  
-
-# Decease/Illness
-
-- I have a sore throat
-- I have running nose (runny nose)
-- Pneumonia
-- Hi guys! I caught a cold so can’t see u tomorrow((
-  - Get well(coffee)
-  - Many thanks) I do my best!
-- Be healthy
-- Take care of yourself
-- I'm feeling sick
-
-
-
-# Traveling
-
-## General
-
-- Who went with you on your trip to UAE? 
-- Is it a popular destination? 
-- High season 
-- Low season
-- How long does it take to get there? 
-  - Flying takes 6 hours
-- As I had hoped
-- How is (was) your trip?
-
-## Clothes
-
-- Should you adhere by the dress code?
-- Do you cover your neck?
-- Did not have to adhere to the dress code on the beach.
-- How many sweaters are you wearing?
-
-
-
-# Russian English
-
-- Take a photo -> Take a picture
-  - If we take a picture together in Bali, It will be cool.
-
-
-
-
-
-# Grammar
-
-- conjugate a verb
-
-
-
-
-
-# SMALL TALKS
-
-## General
-
-- The time flies so much
-
-## Phrases
-
-- The holidays are just around the corner
-- I am looking forward to seeing you on Thursday!
-
-## Weather
-
-- Temperature ranges from 30 to 34 degrees.
-- Vitamin D - luck of sunshine
-- Многих людей бесит такая погода!
-
-
-
-# Peoples
-
-## Jennifer
-
-- Jennifer's birthday on 29/11/2019
-- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
-- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
-- Jennifer doesn't like cold Russian weather.
-
-**Phrases**
-
-1. You are not sorry! If you are sorry help me!
-
-**Mothers words**
-
-1. Do as much business as you can! One of them is going make your popular.
-2. Don't give up! Put your eggs in different baskets. One is going to crack.
-
-## Karyn 
-
-- She lives in Atlanta (California).
-- The temperature is quite stable, and all summer was about 30-35 degrees.
-- Atlanta, 17 -> 2 degrees.
-
-## Yulia
-
-- Ездила в [Шарджа](https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0) в ноябре самый сезон. Temperature is 30-32, water - 25. High season in November. По погоде гуд, но дорого и скучно. 
-- Her husband likes Austria, but she hasn't been there yet.
-- Ездила в Финляндию на выходные в 22-23.11. Говорит скучно.
-
-
-
-# WORKING
-
-## Phrases and word
-
-2. He looks classy.
-3. It's very convenient for me
-4. Have a great weekend!
-5. I am dying to find out!
-6. Очень много эээ, уммм, Нужно говорить `more fluency`
-   - You know..
-   - So..
-
-# Current 
-
-- [Business Writing](https://docs.google.com/document/d/1OFjecIys_sL1DQUC_AFz3fsprPJgMXeGR-cSGEuu_bk/edit#heading=h.yhh37lsu26kw)
-- [Phrasal Verbs](https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit)
-
-## Greeting -> Weather -> Weekend
-
-- Hi, Karyn. How are you getting on?
-
-- We had snowfall on Sunday
-  - And now there are a lot of snow in Saint-Petersburg. 
-  - You know...
-  - Snow melts and it becomes dirty .. nice weather.
-
-# CURRENT 05/12/2019
-
-Share with us.
-
-Служебный роман -> Office romance.
-
-**Chick flicks** -> A movie that appeals mainly to women
-
-A film that indulges in the hopes and dreams of women and/or girls. A film that has a happy, fuzzy, ridiculously unrealistic ending.
-
-- A film that has the following formula:
-- Two people fall in love
-- They get along fine
-- There is some kind of misunderstanding
-- They break up
-- They get back together
-- The end.
-
-
-
-**05/12/2019**
-
- **Business Email Phrases**
-
-**1**  You can    <u>Could you</u>    You will    You 
-
-please arrange accommodation for me near to your offices? ![img](https://lh6.googleusercontent.com/_u19dNZIJByrtNxKInhs7uFa-ZxuA1FAKIrdkssVZglhUEyXM-W1rj5_CvmueGE5DBiAE7hcoAMtQxUkFs0cH0f58U88Qn-YaknUqTGu6uOioSNAADSkLo--WICkZSAuZeifPRFP)
-
-**2** We  __________ if you could send us the confirmation as soon as possible. 
-
-will be grateful  . . <u>would be grateful</u> . . .  would be happy . . .  will be glad
-
-**3** Unfortunately we  _________to change the contract. ![img](https://lh6.googleusercontent.com/PMM5-HGQMoX5P4jysgHWG24gnsv8WwIg_yu7F0lYYTi2Kaf2HT_3mW97YFbK6UYH6ybDuAhOv--YIywalhvAH0LKaJtZOT1ddP_FMuBzumZLxcSudHebJ93G7TwxpDe8CYZ7mqxd)
-
-can't    cannot    <u>are unable</u>     unable
-
-**4** If possible I  _______ to make an appointment to see you to discuss the new contract for next year. ![img](https://lh6.googleusercontent.com/sPmE12gg7Re889OpBkDTOQlUPRgXsHUak5cr9tqVXcir9gf5rw5jlLHHq_1VQZEpvjzVbi82DFpqG_kE18oNiyHZ0kwQf4jZL7A865B2k9EluI23aMOEtxqewkpAz4Z6kjeqoSXE)want  . . . <u>would like</u>  . . . .  would . . like
-
-**5** I  ______________at the sales meeting next week. ![img](https://lh5.googleusercontent.com/kM842aZAW2dvuj-JvROLS8_m8Sj_EjhtNH35w6rgitrQjzdSjT13uXnEt7hvRL8K03r1leFvMvE0vBP4FiMCZyhqbhz8YBzs2B0Umo0KEIuS8hOtZT4zaSloXQ0mcy6BNQX-0bau)
-
- look forward to       look forward for seeing      look to     <u>look forward to seeing you</u>
-
-**6** Feel to _________contact me if you need any more information. 
-
- Glad . .  <u>free</u>  . . fine .  . liberated 
-
-**7** I have placed an order but need some more details ___________shipment. 
-
- For    . on      <u>regarding</u>      concerned 
-
-**8** Do not __________ contact me if you need any more information. 
-
-Wait to     stop     appreciate . <u>hesitate to</u> .   hesitate 
-
-**9** Please _______ your decision as soon as possible. 
-
-make me . . . . . let me . . . .  know . . . give . . . let me 
-
-**10** We look forward to a successful working relationship  ___________
-
-in the future      <u>on future</u>     at the future     to future . 
-
-
-
-**Phrasal Verbs**
-
-1.We tried to _______ our point _______, but he just wouldn't listen.
-<u>Get across</u>
-  get around
-Get together
-
-2. My boss and I don't ________ at all.
-    get along
-    <u>get on</u>
-    get in
-3. It's OK. Don't worry. You'll ________ this.
-    get along
-    get on
-    <u>get over</u>
-4. The museum? You should ________ at the third stop.
-    get through
-    <u>get off</u>
-    get on
-5. As soon as he ________ the horse, I knew that he had never been on one before.
-    got on
-    <u>got around</u>
-    got in
-6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
-    <u>Get away with</u>
-    got rid of
-    got off
-8. I'm really tired because I ________ at 5 AM this morning. 
-    got around
-    <u>got up</u> 
-    got on
-7. Friends can help you to ________ a difficult time in your life. 
-    get around
-    <u>get by</u>
-    get over
-8.Rachel is short of cash this month, she barely has enough money to _____.
-Get on
-Get over
-<u>Get by</u>
-9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
-Get by
-Get out of  
-<u>Get over</u>  
-
-
-
-
-
-# Phrasal verb
-
-# Phrasal verb - GET 
-
-![](_img/phrasal-verbs/get.png)
-
-1. Get down to - Заняться чем-то серьезно
-2. Get out of - Избегать чего-то
-3. Get by - Выживать
-4. Get into - Залезть в (машину)
-5. Get out of - Вылезти из (машины)
-6. Get at - Намекать
-7. Get back at - Отомстить кому-то
-8. Get along - Ладить с кем-то
-9. Get on (with) - Ладить с кем-то
-10. Get across -> Донести идею до слушателя
-11. Get over - Оправиться от чего-либо, пережить
-12. Get on - Зайти в автобуса
-13. Get off - Выйти из автобуса
-14. Get away - Выходить сухим из воды
-15. Get up - Вставать
-16. Get around - Путешествовать
-
-
-
-## 03/12/2019
-
-**SORT OUT**
-
-Meaning: To resolve/fix a problem or difficult situation.
-
-I don't care how you do it, but you have to SORT this problem OUT now! If you don't, it's just going to get worse.
-
-"Are you still having problems with Sue at work?"
-
-"No, we had a long conversation last weekend and SORTED it OUT. Everything is fine between us now."
-
-**TAKE CARE OF**
-
-Meaning: To be responsible for making sure that something is done.
-
-Peter, it's really important that they are told about the changes. I can't do it. So, can you TAKE CARE OF it for me?
-
-Don't worry, I'll TAKE CARE OF organising the party (getting the drinks, booking the place etc...). You just have to invite people to it.
-
-**CARRY OUT**
-
-Meaning: To do/perform a task (or tasks) you have promised or been told to do.
-
-Ok, you need to CARRY OUT my instructions exactly as I say. First, print the summary and give it to Tyra to proofread it and then make her changes. 
-
-Make sure that it's CARRIED OUT by Thursday at the latest. If you don't do it by then, it's going to cause us big problems.
-
-**LOOK INTO**
-
-Meaning: To investigate/examine what the cause of something is, whether something is true or if something is possible.
-
-We still don't know why it happened, but we are LOOKING INTO it. As soon as we know anything, we'll let you know.
-
-What you've suggested we do is a very good idea, but I'm not sure it's possible. I need to LOOK INTO it before I can say if we are going to try to do it or not.
-
-**GO OVER**
-
-Meaning: To explain something to somebody so they understand it and/or know what to do.
-
-If you don't understand how to use a grammatical structure you have learnt in your English class, ask the teacher to GO OVER it again with you. You should understand it then.
-
-Thank you all for agreeing to work for free at tomorrow's festival. Now, I'll GO OVER what's happening on the day and what you each have to do there.
-
-**DEAL WITH**
-
-Meaning: To be responsible for or take responsibility to resolve things (e.g. difficult situations, problems etc...).
-
-"There's a problem with a customer and l don't know what to do."
-
-"Don't worry, leave it to me. I'll DEAL WITH it."
-
-When you work as a receptionist in a hotel you have to DEAL WITH all the problems and requests that the guests staying there may have..
-
-**FIND OUT**
-
-Meaning: To learn something through investigation or discovery that you don't currently know.
-
-"What time does the train to London leave on Friday?"
-
-"I don't know, but I'll FIND OUT and tell you this afternoon."
-
-I was talking to James this morning and I FOUND OUT why he didn't come to the party. His parents told him that he couldn't.
-
-1. I've had this problem with my computer as well. If you delete some files and then restart it, it should    sort out________the problem and it will be working again. 
-2. I'm on holiday next week, so I can't write the weekly report for next week. So, would you mind   _taking care of _________  it for me while I'm away?   
-3. Have you found out______ if we are getting an end of the year bonus yet?
-4. My boss is on vacation so I not only have my own work to do but I also have to _______ deal with______his problems also. 
-5. The pilot has to _carry out_____a series of complex maneuvers procedures.
-6. The government will _look into______ how to reduce unemployment.
-7. We brought in a management consultant to __sort out___ the mess.
-8. I always __go over___ my  notes just before I make a presentation.
-
-
-
-**03/12/2019**
-
-- Snow melts -> we call it -> stick ?? Snow sticks on the street
-
-- enquire -> inform ask
-- I regret -> I sorry (info)
-
-
-
-# Must/Have To/Should
-
-## Formal Vs unformal
-
-Must - formal, often used in writting
-
-Have to - unformal, prefer it when to speak
-
-
-
-## You decision Vs Situation
-
-Must - own decision
-
-Have to - doctor's decision (situation)
-
-
-
-**MUST**
-
-1. Obligation
-2. Strong advice
-3. Something forbidden (rule)
-
-
-
-**Should**
-
-1. Advice
-   - Prefer **shouldn't** if it's advice (not mustn't)
-
-
-
-**I think (option)**
-
-
-
-## TODO
+## TODO -> I haven't VS I don't have
 
 **I haven’t or I don’t have**
 
@@ -755,39 +348,304 @@ Must
 
 
 
+## Does (~~Do~~) everybody
+
+- nobody
+- anybody
+- somebody
+- There was a fight at the party, but **nobody was** hurt. 
+
+
+
+## Where did you have your hair cut? Which hairdresser did you go to?
+
+- ~~did you cut your hair~~ неправильно, так как он не сам стригся, а его стригил. И тут пасивный залог заменяется, конструкцией `did you have something`
+
+## ??? Does he prohibited clean his room VS Is he prohibited clean his room
+
+
+
+# ARTICLES - CONTEXT - Small talks
+
+## Greeting
+
+- Hello [name], How are you?
+- Hi, [name]. How are you getting on?
+- Hello, How are you doing?
+
+## Weather
+
+- Temperature ranges from 30 to 34 degrees.
+- Vitamin D - luck of sunshine
+- Многих людей бесит такая погода!
+
+## Weekend/Holiday
+
+- How you enjoyed your weekend?
+- How did you enjoy your weekend?
+- How was your weekend?
+- The holidays are just around the corner
+
+## Traveling
+
+### General
+
+- Who went with you on your trip to UAE? 
+- Is it a popular destination? 
+- High season 
+- Low season
+- How long does it take to get there? 
+  - Flying takes 6 hours
+- As I had hoped
+- How is (was) your trip?
+
+### Clothes
+
+- Should you adhere by the dress code?
+- Do you cover your neck?
+- Did not have to adhere to the dress code on the beach.
+- How many sweaters are you wearing?
+
+## Decease/Illness
+
+- I have a sore throat
+- I have running nose (runny nose)
+- Pneumonia
+- Hi guys! I caught a cold so can’t see u tomorrow((
+  - Get well(coffee)
+  - Many thanks) I do my best!
+- Be healthy
+- Take care of yourself
+- I'm feeling sick
+
+## Web-meeting
+
+### General
+
+- I'm back
+- He will be a bit later. He asked to start without him. He'll join (?to) us as soon as he can.
+- I am looking forward to seeing you on Thursday!
+
+### Browser navigation
+
+- Let's go back to the previous page
+
+### Problems
+
+- Let me call back! (Need to restart the laptop)
+- I can't hear you.
+  - Oh, something happened with my headphones, but now it works.
+- I can't see you (Skype), (~~I don't see you~~), 
+- I should charge my laptop.
+  - Here we go! .. Sorry.. Go ahead!
+- My computer is booting.
+
+## Email
+
+- inquire is inform ask
+- I regret -> I sorry (info)
+
+# ARTICLES - CONTEXT - OTHERS
+
+## Abbreviation
+
+1. TIA - Thanks in advance
+
+2. IMO - In my opinion
+3. 21'' screen - 21 inch screen
+
+## Common
+
+- She has gone (Oна ушла)
+- The time flies so much
+
+## Dog
+
+- He will be bringing his dog.
+- I should look after his dog.
+
+## Money
+
+- I will be broke (I don't have money)
+
+## Work
+
+- If I get fired from my job I wouldn't have money.
+
+
+
+# ARTICLES - PHRASAL VERBS
+
+## TODO -> GET 
+
+![](_img/phrasal-verbs/get.png)
+
+1. Get down to - Заняться чем-то серьезно
+2. Get out of - Избегать чего-то
+3. Get by - Выживать
+4. Get into - Залезть в (машину)
+5. Get out of - Вылезти из (машины)
+6. Get at - Намекать
+7. Get back at - Отомстить кому-то
+8. Get along - Ладить с кем-то
+9. Get on (with) - Ладить с кем-то
+10. Get across -> Донести идею до слушателя
+11. Get over - Оправиться от чего-либо, пережить
+12. Get on - Зайти в автобуса
+13. Get off - Выйти из автобуса
+14. Get away - Выходить сухим из воды
+15. Get up - Вставать
+16. Get around - Путешествовать
+
+
+
+## TODO -> OTHERS
+
+**SORT OUT**
+
+Meaning: To resolve/fix a problem or difficult situation.
+
+I don't care how you do it, but you have to SORT this problem OUT now! If you don't, it's just going to get worse.
+
+"Are you still having problems with Sue at work?"
+
+"No, we had a long conversation last weekend and SORTED it OUT. Everything is fine between us now."
+
+**TAKE CARE OF**
+
+Meaning: To be responsible for making sure that something is done.
+
+Peter, it's really important that they are told about the changes. I can't do it. So, can you TAKE CARE OF it for me?
+
+Don't worry, I'll TAKE CARE OF organising the party (getting the drinks, booking the place etc...). You just have to invite people to it.
+
+**CARRY OUT**
+
+Meaning: To do/perform a task (or tasks) you have promised or been told to do.
+
+Ok, you need to CARRY OUT my instructions exactly as I say. First, print the summary and give it to Tyra to proofread it and then make her changes. 
+
+Make sure that it's CARRIED OUT by Thursday at the latest. If you don't do it by then, it's going to cause us big problems.
+
+**LOOK INTO**
+
+Meaning: To investigate/examine what the cause of something is, whether something is true or if something is possible.
+
+We still don't know why it happened, but we are LOOKING INTO it. As soon as we know anything, we'll let you know.
+
+What you've suggested we do is a very good idea, but I'm not sure it's possible. I need to LOOK INTO it before I can say if we are going to try to do it or not.
+
+**GO OVER**
+
+Meaning: To explain something to somebody so they understand it and/or know what to do.
+
+If you don't understand how to use a grammatical structure you have learnt in your English class, ask the teacher to GO OVER it again with you. You should understand it then.
+
+Thank you all for agreeing to work for free at tomorrow's festival. Now, I'll GO OVER what's happening on the day and what you each have to do there.
+
+**DEAL WITH**
+
+Meaning: To be responsible for or take responsibility to resolve things (e.g. difficult situations, problems etc...).
+
+"There's a problem with a customer and l don't know what to do."
+
+"Don't worry, leave it to me. I'll DEAL WITH it."
+
+When you work as a receptionist in a hotel you have to DEAL WITH all the problems and requests that the guests staying there may have..
+
+**FIND OUT**
+
+Meaning: To learn something through investigation or discovery that you don't currently know.
+
+"What time does the train to London leave on Friday?"
+
+"I don't know, but I'll FIND OUT and tell you this afternoon."
+
+I was talking to James this morning and I FOUND OUT why he didn't come to the party. His parents told him that he couldn't.
+
+1. I've had this problem with my computer as well. If you delete some files and then restart it, it should    sort out________the problem and it will be working again. 
+2. I'm on holiday next week, so I can't write the weekly report for next week. So, would you mind   _taking care of _________  it for me while I'm away?   
+3. Have you found out______ if we are getting an end of the year bonus yet?
+4. My boss is on vacation so I not only have my own work to do but I also have to _______ deal with______his problems also. 
+5. The pilot has to _carry out_____a series of complex maneuvers procedures.
+6. The government will _look into______ how to reduce unemployment.
+7. We brought in a management consultant to __sort out___ the mess.
+8. I always __go over___ my  notes just before I make a presentation.
+
+
+
+# Russian English
+
+- Take a photo -> Take a picture
+  - If we take a picture together in Bali, It will be cool.
+
+
+
+# Peoples
+
 ## Jennifer
 
-If I spend this money I will be broken. ?? is it correct?
+- Jennifer's birthday on 29/11/2019
+- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
+- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
+- Jennifer doesn't like cold Russian weather.
+- Боится высоты
 
-## if and wish
+**Phrases**
 
-5.1. If I went to bed now, I **wouldn't** sleep.
+1. You are not sorry! If you are sorry help me!
 
-5.2 If I were rich, **I would travel** a lot.
+**Mothers words**
 
-5.3 I wish I wouldn't have to work tomorrow, but unfortunately I do.
+1. Do as much business as you can! One of them is going make your popular.
+2. Don't give up! Put your eggs in different baskets. One is going to crack.
 
-5.4 The view was wonderful. If I **had** a camera with me, I would have taken some pictures.
+## Karyn 
 
-5.5 The weather is horrible. I wish it **would stop** raining.
+- She lives in Atlanta (California).
+- The temperature is quite stable, and all summer was about 30-35 degrees.
+- Atlanta, 17 -> 2 degrees.
 
-6.1 We **were woken up** by a loud noise during the night.
+## Yulia
 
-6.2 A new supermarket is going to **be built** next year.
-
-6.3 There's somebody walking behind us. I think we **are being followed**.
-
-6.4 Where **were you born**?
-
-6.5 There was a fight at the party, but nobody **was hurt**. 
-
-6.6 Jane was supposed to phone me last night, but she didn't.
-
-6.7 Where **did you have your hair cut**? Which hairdresser did you go to?
-
+- Ездила в [Шарджа](https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0) в ноябре самый сезон. Temperature is 30-32, water - 25. High season in November. По погоде гуд, но дорого и скучно. 
+- Her husband likes Austria, but she hasn't been there yet.
+- Ездила в Финляндию на выходные в 22-23.11. Говорит скучно.
 
 
-## Pronunciation - TODO
+
+# WORKING
+
+## Phrases and word
+
+2. He looks classy.
+3. It's very convenient for me
+4. Have a great weekend!
+5. I am dying to find out!
+6. Очень много эээ, уммм, Нужно говорить `more fluency`
+   - You know..
+   - So..
+
+# !!!-----------CURRENT-----------!!!
+
+- [Business Writing](https://docs.google.com/document/d/1OFjecIys_sL1DQUC_AFz3fsprPJgMXeGR-cSGEuu_bk/edit#heading=h.yhh37lsu26kw)
+- [Phrasal Verbs](https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit)
+
+## Greeting -> Weather -> Weekend
+
+- Hi, Karyn. How are you getting on?
+
+- We had snowfall on Sunday
+  - And now there are a lot of snow in Saint-Petersburg. 
+  - You know...
+  - Snow melts and it becomes dirty .. nice weather.
+  - Snow melts -> we call it -> stick ?? Snow sticks on the street
+
+
+
+
+
+# Pronunciation
 
 - Lamborghini - [Ламборгини] - если после "g" стоит "h", то оно читается как "Г".
   - Lamborghini Urus is the world's first Super Sport Utility Vehicle
@@ -835,7 +693,7 @@ If I spend this money I will be broken. ?? is it correct?
 
 
 
-## ARCHIVE of Phrases
+# ARCHIVE of Phrases
 
 - It helps to be focused on ....effectivity.
 - Straight to the point (Приступить сразу к делу)
@@ -852,11 +710,6 @@ If I spend this money I will be broken. ?? is it correct?
 - Regarding (In reference to) finance workshop
 - I relate (I had experience)
 - Jane was supposed to phone me last night, but she didn't. (Джен должна была позвонить мне..)
-
-
-
-## Phrases
-
 - 9 am - nine am sharp
 
 - My wife keeps grounded!
@@ -878,6 +731,116 @@ If I spend this money I will be broken. ?? is it correct?
   
 
 # JOURNAL
+
+**05/12/2019**
+
+ **Business Email Phrases**
+
+**1**  You can    <u>Could you</u>    You will    You 
+
+please arrange accommodation for me near to your offices? ![img](https://lh6.googleusercontent.com/_u19dNZIJByrtNxKInhs7uFa-ZxuA1FAKIrdkssVZglhUEyXM-W1rj5_CvmueGE5DBiAE7hcoAMtQxUkFs0cH0f58U88Qn-YaknUqTGu6uOioSNAADSkLo--WICkZSAuZeifPRFP)
+
+**2** We  __________ if you could send us the confirmation as soon as possible. 
+
+will be grateful  . . <u>would be grateful</u> . . .  would be happy . . .  will be glad
+
+**3** Unfortunately we  _________to change the contract. ![img](https://lh6.googleusercontent.com/PMM5-HGQMoX5P4jysgHWG24gnsv8WwIg_yu7F0lYYTi2Kaf2HT_3mW97YFbK6UYH6ybDuAhOv--YIywalhvAH0LKaJtZOT1ddP_FMuBzumZLxcSudHebJ93G7TwxpDe8CYZ7mqxd)
+
+can't    cannot    <u>are unable</u>     unable
+
+**4** If possible I  _______ to make an appointment to see you to discuss the new contract for next year. ![img](https://lh6.googleusercontent.com/sPmE12gg7Re889OpBkDTOQlUPRgXsHUak5cr9tqVXcir9gf5rw5jlLHHq_1VQZEpvjzVbi82DFpqG_kE18oNiyHZ0kwQf4jZL7A865B2k9EluI23aMOEtxqewkpAz4Z6kjeqoSXE)want  . . . <u>would like</u>  . . . .  would . . like
+
+**5** I  ______________at the sales meeting next week. ![img](https://lh5.googleusercontent.com/kM842aZAW2dvuj-JvROLS8_m8Sj_EjhtNH35w6rgitrQjzdSjT13uXnEt7hvRL8K03r1leFvMvE0vBP4FiMCZyhqbhz8YBzs2B0Umo0KEIuS8hOtZT4zaSloXQ0mcy6BNQX-0bau)
+
+ look forward to       look forward for seeing      look to     <u>look forward to seeing you</u>
+
+**6** Feel to _________contact me if you need any more information. 
+
+ Glad . .  <u>free</u>  . . fine .  . liberated 
+
+**7** I have placed an order but need some more details ___________shipment. 
+
+ For    . on      <u>regarding</u>      concerned 
+
+**8** Do not __________ contact me if you need any more information. 
+
+Wait to     stop     appreciate . <u>hesitate to</u> .   hesitate 
+
+**9** Please  ??? your decision as soon as possible. 
+
+make me . . . . . let me . . . .  know . . . give . . . let me 
+
+**10** We look forward to a successful working relationship  ___________
+
+in the future      <u>on future</u>     at the future     to future . 
+
+
+
+**Phrasal Verbs**
+
+1.We tried to _______ our point _______, but he just wouldn't listen.
+<u>Get across</u>
+  get around
+Get together
+
+2. My boss and I don't ________ at all.
+   get along
+   <u>get on</u>
+   get in
+3. It's OK. Don't worry. You'll ________ this.
+   get along
+   get on
+   <u>get over</u>
+4. The museum? You should ________ at the third stop.
+   get through
+   <u>get off</u>
+   get on
+5. As soon as he ________ the horse, I knew that he had never been on one before.
+   got on
+   <u>got around</u>
+   got in
+6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
+   <u>Get away with</u>
+   got rid of
+   got off
+7. I'm really tired because I ________ at 5 AM this morning. 
+   got around
+   <u>got up</u> 
+   got on
+8. Friends can help you to ________ a difficult time in your life. 
+   get around
+   <u>get by</u>
+   get over
+   8.Rachel is short of cash this month, she barely has enough money to _____.
+   Get on
+   Get over
+   <u>Get by</u>
+9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
+   Get by
+   Get out of  
+   <u>Get over</u>  
+
+
+
+## 05/12/2019 - Karyn
+
+Share with us.
+
+Служебный роман -> Office romance.
+
+**Chick flicks** -> A movie that appeals mainly to women
+
+A film that indulges in the hopes and dreams of women and/or girls. A film that has a happy, fuzzy, ridiculously unrealistic ending.
+
+- A film that has the following formula:
+- Two people fall in love
+- They get along fine
+- There is some kind of misunderstanding
+- They break up
+- They get back together
+- The end.
+
+
 
 ## Karyn - 28/11/2019 - Business writing
 
@@ -1277,10 +1240,6 @@ And get started with first presenter Evgenia.
 
 
 
-
-
-
-
 ## 12/08/2019
 
 **Present Simple/Past Simple/Present Continuous/Present Perfect Continuous**
@@ -1297,8 +1256,6 @@ And get started with first presenter Evgenia.
 - Present Perfect Continuous
   - The Smolny Cathedral has been repairing since 2015.
   - The business center "Naberazhnaya" opposite the Smolny Cathedral has been saling for 6 months for 600 million rubles.
-
-
 
 
 
@@ -1348,17 +1305,11 @@ And get started with first presenter Evgenia.
 
 
 
-
-
 **Here is the article for you to present:**
 
 **Summary**
 
 Football fans in **South Korea** are planning to sue Italian soccer giants Juventus and its star player Cristiano Ronaldo. **Over 2,000 fans** want compensation after Ronaldo failed to play in a pre-season friendly against an all-star **K League team**. Juventus signed a contract to play Ronaldo for 45 minutes of the game, but **he stayed on the subs bench and did not even lace up his soccer boots**. Many fans at the game switched from chanting Ronaldo's name to chanting the name of his great rival Lionel Messi. There were also boos around the stadium. The fans have also been voicing their anger at Ronaldo on social media. One wrote: "He betrayed the **60,000** audience and belittled us. I'm no longer a Ronaldo fan."
-
-
-
-**
 
 
 
@@ -1553,11 +1504,5 @@ I use a lot of tools from google and it's awesome.
 ### I use google-calendar on my PC
 
 and I integrated calendar with my mobile phone. It's very convenient to use from different devices.
-
-### 
-
-
-
-
 
 
