--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -87,21 +87,66 @@ Have to - doctor's decision (situation)
 **Murphy p. 313 ex. 19 -> Answer p. 369**
 
 1. If **you found**, a wallet in the street, what would you do with it? (you / find)
+
 2. I must hurry. My friend will be annoyed if **I’m not** on time. (I / not / be)
+
 3. I didn't realise that Gary was in hospital. If **I'd known** he was in hospital, I would have gone to visit him. (I / know)
+
 4. If the phone **rings**, can you answer it? (ring)
+
 5. I can't decide what to do. What would you do if **you were** in my position?(you / be)
+
 6. a : What shall we do tomorrow?
    b : Well, if **it's** a nice day, we can go to the beach. (it / be)
+   
 7. a : Let's go to the beach.
    b : No, it's too cold. If **it was** warmer, I wouldn't mind going. (it / be)
+   
 8. a : Did you go to the beach yesterday?
    b : No, it was too cold. If **it had been** warmer, we might have gone. (it / be)
+   
 9. If **you had** enough money to go anywhere in the world, where would you go? (you / have)
+
 10. I'm glad we had a map. I'm sure we would have got lost if **we hadn't had** one. (we / not / have)
+
 11. The accident was your fault. If **you had driven/you had been driving** more carefully, it wouldn't have happened. (you / drive)
+
 12. a : Why do you read newspapers?
     b : Well, if **I didn't read** newspapers, I wouldn't know what was happening in the world. (I / not / read)
+    
+    
+
+**Murphy p. 314 ex 20 ->**
+
+1. Lisa is tired all the time. She shouldn't go to bed so late.
+   - If Lisa **didn't go** to bed so late, she wouldn't be tired all the time.
+2. It's getting late. I don't think Sarah will come to see us now.
+   - I'd be surprised if Sarah **came** to see us now.
+3. I'm sorry I disturbed you. I didn't know you were busy.
+   - If I **had known** you were busy, I **wouldn't have disturbed** you.
+4. I don't want them to be upset, so I've decided not to tell them what happened.
+   - **They would be** upset if I **told** them what happened.
+5. The dog attacked you, but only because you frightened it.
+   - If you **hadn't frightened** the dog, it **wouldn't have attached** you.
+6. Unfortunately I didn't have an umbrella and so I got very wet in the rain.
+   - I **wouldn't have gotten** so wet if I **had had** an umbrella.
+7. Martin failed his driving test. He was very nervous and that's why he failed.
+   - If he **hadn't been** so nervous, he **would have passed** the test.
+
+**Murphy p. 314 ex 21 ->**
+
+1. I'd go out tonight if I wasn't feeling so tired.
+2. I'd have gone out last night if I hadn't had so much to do.
+3. If you hadn't reminded me, I would have forgotten Jane's birthday.
+4. If I had my camera, I would take a picture of you.
+5. If you give me the camera, I will take a picture of you.
+6. Who would you phone if you were in trouble.
+7. We wouldn't have been late if you hadn't taken so long to get ready.
+8. If I'd been able to get a ticket,I would have gone to the concert.
+9. If I'd done better at the interview, I might have got the job.
+10. You wouldn't be hungry now if you had eaten lunch.
+11. Cities would be nicer places if there was less traffic.
+12. If there was no TV, people would go out more.
 
 
 
@@ -642,6 +687,14 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
   - Snow melts -> we call it -> stick ?? Snow sticks on the street
 
 
+
+
+
+## Didn't have VS There wasn't
+
+- Cities would be nicer places if it didn't have traffic.
+- Cities would be nicer places if there wasn't traffic.
+- Cities would be nicer places if there was less traffic.
 
 
 
